Perfectionnement des descriptions

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
                         <div class="col-6">
                             <p class='titre-section scroll-appear'> <i class="far fa-clock"></i> Horaires d'ouverture : </p>
                             <p class="texte-image text-contenu scroll-appear">
+                                A partir du 1er spetembre 2019<br><br>
                                 • Du mardi au samedi <br>
                                 • De 9 heures à 21 heures <br> <br>
                                 Ouvert pendant les vacances et les jours feriés.
