--- a/salles/asylum.html
+++ b/salles/asylum.html
@@ -38,17 +38,20 @@
     <section id="content">
         <div class="container-fluid">
             <div class="row">
-                <h1 class="col-8 mx-auto centre titre-section nom-theme">Asylum</h1>
-            </div>
-            <div class="row">
                 <div class="col-12 image-header" style="background-image: url(assets/img/asylum2.jpg)">
+                    <div class="container">
+                        <div class="nom-theme">Asylum</div>
+                    </div>
                 </div>
             </div>
         </div>
 
 <div class="container">
+<!--    <div class="row">-->
+<!--        <h1 class="col-8 titre-section nom-theme">Asylum</h1>-->
+<!--    </div>-->
     <div class="row description-salle">
-        <div class="col-12">
+        <div class="col-7">
             <p>
                 Vous avez quelques problèmes dans votre vie. Rien de grave, enfin, vous ne savez pas. C’est votre thérapeute qui vous le dira. Vous avez d’ailleurs rendez-vous aujourd’hui. Arrivé dans son bureau, rien d’anormal ne saute à vos yeux. Le docteur Roussel est très sympathique. Votre session se passe sans encombre, et bonne nouvelle, vous n’êtes pas fou, juste un peu stressé. Il vous a d’ailleurs prescrit des anti-dépresseurs à prendre immédiatement. Vous rentrez chez vous tranquillement juste après.
             </p>
@@ -76,11 +79,46 @@
                 <i>Ne convient pas aux enfants de moins de 16 ans</i>
             </p>
         </div>
-    </div>
-</div>
-<div class="row section-resa">
-    <div class="col-12 resa-button-wrapper">
-        <a href="#pages/resa" class="resa-button" style="transform: scale(0.8)">Réserver</a>
+        <div class="col-1"></div>
+        <div class="col-4">
+            <div class="caracteristiques-salle">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="caracteristique cl-6 scroll-appear caract-1"><i class="fal fa-search"></i> Fouille</div>
+                        <div class="caracteristique cl-3 scroll-appear caract-2"><i class="fal fa-cubes"></i> Manipulation</div>
+                    </div>
+                    <div class="col-6">
+                        <div class="caracteristique cl-7 scroll-appear caract-3"><i class="fal fa-lightbulb-on"></i> Réflexion</div>
+                        <div class="caracteristique cl-9 scroll-appear caract-4"><i class="fal fa-tachometer"></i> Difficulté</div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="joueurs">
+                            <i class="fas fa-male fa-2x joueur scroll-appear"></i>
+                            <i class="fas fa-male fa-2x joueur scroll-appear"></i>
+                            <i class="fas fa-male fa-2x joueur scroll-appear"></i>
+                            <i class="fal fa-male fa-2x joueur scroll-appear"></i>
+                            <i class="fal fa-male fa-2x joueur scroll-appear"></i>
+                        </div>
+                        <div class="info-salle scroll-appear">3 à 5 joueurs</div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 info-salle scroll-appear">
+                        <i class="far fa-lg fa-wheelchair" style="margin-right: 5px"></i> Salle accessible aux PMR
+                    </div>
+                    <div class="col-12 info-salle scroll-appear">
+                        <i class="fal fa-lg fa-user" style="margin-right: 5px"></i> À partir de <b>16 ans</b>
+                    </div>
+                </div>
+                <div class="row section-resa section-resa-theme">
+                    <div class="col-12 resa-button-wrapper">
+                        <a href="#pages/resa" class="resa-button scroll-appear">Réserver</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
