--- a/salles/bastille.html
+++ b/salles/bastille.html
@@ -38,17 +38,17 @@
     <section id="content">
         <div class="container-fluid">
             <div class="row">
-                <h1 class="col-8 mx-auto centre titre-section nom-theme">Prisonniers de la Bastille</h1>
-            </div>
-            <div class="row">
                 <div class="col-12 image-header" style="background-image: url(assets/img/bastille2.jpg)">
+                    <div class="container">
+                        <div class="nom-theme">Prisonniers de la Bastille</div>
+                    </div>
                 </div>
             </div>
         </div>
 
 <div class="container">
     <div class="row description-salle">
-        <div class="col-12">
+        <div class="col-7">
             <p>
                 1789. La Révolution gronde dans la France entière.
             </p>
@@ -59,7 +59,7 @@
                 Vous rêvez de liberté, d’égalité, de fraternité.
             </p>
             <p>
-                Mais personne ne vous écoute, personne ne vous entend. Le gouvernement ne vous voit pas, ne vous considère toujours pas. Vous n’avez pas d’autres choix que d’employer la manière forte : les fusils, les lance pierres, le combat au corps à corps, tout est permis. Vous êtes près à mettre à sang et à feu votre ville, si c’est le seul moyen de vous faire reconnaître, de prendre le pouvoir. Un seul but, faire tomber la monarchie. Le roi a tout, vous n’avez rien. L’heure de la justice a sonnée. <br>
+                Mais personne ne vous écoute, personne ne vous entend. Le gouvernement ne vous voit pas, ne vous considère toujours pas. Vous n’avez pas d’autres choix que d’employer la manière forte : les fusils, les lance pierres, le combat au corps à corps, tout est permis. Vous êtes près à mettre à sang et à feu votre ville, si c’est le seul moyen de vous faire reconnaître, de prendre le pouvoir. Un seul but, faire tomber la monarchie. Le roi a tout, vous n’avez rien. L’heure de la justice a sonné. <br>
                 Tout est permis mais seulement de votre point de vue puisque très vite, vous êtes arrêté et mis en prison. Pas n’importe quelle prison : la Bastille de Grenoble. Grande, sombre, dans les montagnes, avec les meilleurs gardes de la région et dont personne ne s’est encore évadé. En effet, ces soldats ne vous quitterons pas des yeux et fixerons vos moindres mouvements.
             </p>
             <p>
@@ -72,11 +72,42 @@
                 <i>Ne convient pas aux enfants de moins de 14 ans</i>
             </p>
         </div>
-    </div>
-</div>
-<div class="row section-resa">
-    <div class="col-12 resa-button-wrapper">
-        <a href="#pages/resa" class="resa-button" style="transform: scale(0.8)">Réserver</a>
+        <div class="col-1"></div>
+        <div class="col-4">
+            <div class="caracteristiques-salle">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="caracteristique cl-8 scroll-appear caract-1"><i class="fal fa-search"></i> Fouille</div>
+                        <div class="caracteristique cl-5 scroll-appear caract-2"><i class="fal fa-cubes"></i> Manipulation</div>
+                    </div>
+                    <div class="col-6">
+                        <div class="caracteristique cl-4 scroll-appear caract-3"><i class="fal fa-lightbulb-on"></i> Réflexion</div>
+                        <div class="caracteristique cl-7 scroll-appear caract-4"><i class="fal fa-tachometer"></i> Difficulté</div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="joueurs">
+                            <i class="fas fa-male fa-2x joueur scroll-appear"></i>
+                            <i class="fas fa-male fa-2x joueur scroll-appear"></i>
+                            <i class="fas fa-male fa-2x joueur scroll-appear"></i>
+                            <i class="fal fa-male fa-2x joueur scroll-appear"></i>
+                        </div>
+                        <div class="info-salle scroll-appear">3 à 4 joueurs</div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 info-salle scroll-appear">
+                        <i class="fal fa-lg fa-user" style="margin-right: 5px"></i> À partir de <b>14 ans</b>
+                    </div>
+                </div>
+                <div class="row section-resa section-resa-theme">
+                    <div class="col-12 resa-button-wrapper">
+                        <a href="#pages/resa" class="resa-button scroll-appear">Réserver</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
