ajustelents mercredi soir

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                         <div class="col-lg-6" id="marges1">
                             <h2 class="titre-section"> D'autres univers </h2>
                             <div class="texte-image text-contenu">
-                                <p>Les pièces s’appellent des salles, qui ont chacune un thème. Ce thème vous met en immersion et vous plonge au cœur d’univers mémorables. </p>
-                                <p>Chacune renferme des énigmes uniques et une histoire contée par votre Game Master, qui est là pour vous aider. En effet, vous allez peut-être vous retrouver bloqué à des moments, mais votre Game Master est là pour vous livrer des indications, des indices supplémentaire. </p>
-                                <p>Mais il ne vous dévoilera pas tout non plus, les meilleurs indices restent votre esprit.</p>
+                                <p>Chaque salle proposée possède un thème. Ce thème vous met en immersion et vous plonge au cœur d’univers mémorables. </p>
+                                <p>Chacune renferme des énigmes uniques et une histoire contée par votre Game Master, qui est là pour vous aider. En effet, vous allez peut-être vous retrouver bloqué à des moments, et votre Game Master sera là pour vous livrer des indications, des indices supplémentaire. </p>
+                                <p>Mais il ne vous dévoilera pas tout non plus, les meilleurs indices viendront de votre esprit.</p>
                             </div>
                         </div>
                     </div>
@@ -228,7 +228,7 @@
                         <div class="col-6">
                             <p class='titre-section scroll-appear'> <i class="far fa-clock"></i> Horaires d'ouverture : </p>
                             <p class="texte-image text-contenu scroll-appear">
-                                A partir du 1er spetembre 2019<br><br>
+                                A partir du 1er septembre 2019<br><br>
                                 • Du mardi au samedi <br>
                                 • De 9 heures à 21 heures <br> <br>
                                 Ouvert pendant les vacances et les jours feriés.
