--- a/pages/resa.html
+++ b/pages/resa.html
@@ -60,11 +60,54 @@
                         </p>
                         <p class="animate"><input class="resainput type="text" name="nombre" placeholder="Nombre de personnes participant"/></p>
                         <p class="animate"><input class="resainput" type="text" name="numero" placeholder="Numéro de téléphone"/></p>
-                        <p><button type="submit" class="btn btn-outline-danger">Valider  <i class="fas fa-chevron-right"></i></button></p>
+                        <p class="animate"><button type="submit" class="btn btn-outline-danger">Valider  <i class="fas fa-chevron-right"></i></button></p>
                     </form>
                 </div>
                 <div class="col-6 centre">
-                    <h1 class="titreFormulaire anim-delay-5">Tarifs</h1>
+                    <h1 class="titreFormulaire anim-delay-7">Nos Tarifs</h1>
+                    <div id="tarifs">
+                        <div class="row">
+                            <div class="col-4 text-right icons">
+                                <i class="fal fa-male joueur tarif-joueur anim-delay-6"></i>
+                                <i class="fal fa-male joueur tarif-joueur anim-delay-7"></i>
+                                <i class="fal fa-male joueur tarif-joueur anim-delay-8"></i>
+                            </div>
+                            <div class="col-8 text-left animate anim-delay-8">
+                                3 joueurs - 30€ / joueur
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-4 text-right icons">
+                                <i class="fal fa-male joueur tarif-joueur anim-delay-9"></i>
+                                <i class="fal fa-male joueur tarif-joueur anim-delay-10"></i>
+                                <i class="fal fa-male joueur tarif-joueur anim-delay-11"></i>
+                                <i class="fal fa-male joueur tarif-joueur anim-delay-12"></i>
+                            </div>
+                            <div class="col-8 text-left animate anim-delay-12">
+                                4 joueurs - 25€ / joueur
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-4 text-right icons">
+                                <i class="fal fa-male joueur tarif-joueur anim-delay-13"></i>
+                                <i class="fal fa-male joueur tarif-joueur anim-delay-14"></i>
+                                <i class="fal fa-male joueur tarif-joueur anim-delay-15"></i>
+                                <i class="fal fa-male joueur tarif-joueur anim-delay-16"></i>
+                                <i class="fal fa-male joueur tarif-joueur anim-delay-17"></i>
+                            </div>
+                            <div class="col-8 text-left animate anim-delay-17">
+                                5 joueurs - 20€ / joueur
+                            </div>
+                            <div class="col-2 text-right icons tarif-clock anim-delay-18">
+                                <i class="fal fa-clock"></i>
+                            </div>
+                            <div class="col-10 text-left animate anim-delay-18">
+                                Durée d'une partie: 60 minutes
+                            </div>
+                        </div>
+                        <div class="row">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
