--- a/pages/resa.html
+++ b/pages/resa.html
@@ -47,8 +47,8 @@
                     <h1 class="titreFormulaire">Réserver</h1>
                     <form action="" id="form1" method="post">
                         <p class="animate"><input class="resainput" type="text" name="nom" placeholder="Nom / Prénom"/></p>
-                        <p class="animate"><input class="resainput" type="text" name="date" placeholder="Date de réservation souhaitée"/></p>
-                        <p class="animate"><input class="resainput" type="text" name="heure" placeholder="Heure souhaitée"/></p>
+                        <p class="animate"><input class="resainput" type="text" name="date" placeholder="Date de réservation souhaitée (jour/mois)"/></p>
+                        <p class="animate"><input class="resainput" type="text" name="heure" placeholder="Heure souhaitée (de 13h à 20h, du mardi au samedi)"/></p>
                         <p class="animate">
                             <!--                <p><input type="text" name="salle" placeholder="Numéro de salle (1, 2, 3)"/></p>-->
                             <select class="resainput" name="salleselect" id="salle-select">
