--- a/salles/titanic.html
+++ b/salles/titanic.html
@@ -118,6 +118,16 @@
                 </div>
             </div>
         </div>
+        <div class="col-7">
+            <div class="row">
+                <div class="col-6 text-center">
+                    <a href="#salles/bastille" class="lien-slide" data-texte="Salle 1">Salle 1</a>
+                </div>
+                <div class="col-6 text-center">
+                    <a href="#salles/asylum" class="lien-slide" data-texte="Salle 2">Salle 2</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
