--- a/salles/asylum.html
+++ b/salles/asylum.html
@@ -119,6 +119,16 @@
                 </div>
             </div>
         </div>
+        <div class="col-7">
+            <div class="row">
+                <div class="col-6 text-center">
+                    <a href="#salles/bastille" class="lien-slide" data-texte="Salle 1">Salle 1</a>
+                </div>
+                <div class="col-6 text-center">
+                    <a href="#salles/titanic" class="lien-slide" data-texte="Salle 3">Salle 3</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
