--- a/salles/bastille.html
+++ b/salles/bastille.html
@@ -54,7 +54,7 @@
             </p>
             <p>
                 Bonnet phrygien sur la tête, le poing levée, criant à plein poumon, vous êtes les chefs de ces émeutes. <br>
-                Déambulants dans Grenoble, vous êtes les leaders du mouvement. Les rêveurs de ce peuple. Les libres penseurs de votre génération. <br>
+                Déambulant dans Grenoble, vous êtes les leaders du mouvement. Les rêveurs de ce peuple. Les libres penseurs de votre génération. <br>
                 Vous rêvez d’une France libre, de droits égaux, et d’une union des citoyens. <br>
                 Vous rêvez de liberté, d’égalité, de fraternité.
             </p>
@@ -105,6 +105,16 @@
                     <div class="col-12 resa-button-wrapper">
                         <a href="#pages/resa" class="resa-button scroll-appear">Réserver</a>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-7">
+            <div class="row">
+                <div class="col-6 text-center">
+                    <a href="#salles/asylum" class="lien-slide" data-texte="Salle 2">Salle 2</a>
+                </div>
+                <div class="col-6 text-center">
+                    <a href="#salles/titanic" class="lien-slide" data-texte="Salle 3">Salle 3</a>
                 </div>
             </div>
         </div>
