--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <div id="bloc-accueil">
             <header id="intro">
                 <video loop poster="assets/img/poster-video.jpg" id="bgvid">
-                    <source src="assets/media/video_test.mp4" type="video/mp4">
+                    <source src="assets/media/teaser_bg.mp4" type="video/mp4">
                 </video>
                 <div id="bgimg"></div>
 
                 <div id="fgvid">
                     <video controls poster="assets/img/poster-video.jpg">
-                        <source src="assets/media/video_test.mp4" type="video/mp4">
+                        <source src="assets/media/teaser.mp4" type="video/mp4">
                     </video>
                 </div>
 
