--- a/salles/asylum.html
+++ b/salles/asylum.html
@@ -70,7 +70,7 @@
                 Non vous n'êtes pas en prison. Mais où êtes vous ? Vous portez une chemise d’hôpital et des personnes en blouses blanches passent devant vous. Comment êtes-vous arrivé ici ? Peut-être avez-vous eu un accident en rentrant ? Mais quel genre d’établissement enferme ses patients dans des cellules ? Votre cerveau ne fait qu’un tour et vous avez devinez. Que faites-vous dans un hôpital psychiatrique ?
             </p>
             <p>
-                Une voix se fait entendre : “Ravi de vous revoir, chers patients !”. Vous connaissez cette voix, vous l’avez entendu il y a quelques heures. Le docteur Roussel ! “J’espère que vous aimez votre nouveau traitement, je passerai dans exactement une heure pour décider de votre sort !”. Vous avez une heure. Soixante minutes pour tous sortir d’ici. Les portes sont fermées, les lumières disjonctent, votre téléphone a disparu, et vous n’avez aucune notion du temps. Vous n’avez que votre cerveau, et une équipe, à vous de trouver et de résoudre le reste.
+                Une voix se fait entendre : “Ravi de vous revoir, chers patients !”. Vous connaissez cette voix, vous l’avez entendue il y a quelques heures. Le docteur Roussel ! “J’espère que vous aimez votre nouveau traitement, je passerai dans exactement une heure pour décider de votre sort !”. Vous avez une heure. Soixante minutes pour tous sortir d’ici. Les portes sont fermées, les lumières disjonctent, votre téléphone a disparu, et vous n’avez aucune notion du temps. Vous n’avez que votre cerveau, et une équipe, à vous de trouver et de résoudre le reste.
             </p>
             <p id="gras">
                 La prochaine fois vous n’irez pas chez le thérapeute… s’il y a une prochaine fois !  <br> <br>
