--- a/salles/bastille.html
+++ b/salles/bastille.html
@@ -59,14 +59,14 @@
                 Vous rêvez de liberté, d’égalité, de fraternité.
             </p>
             <p>
-                Mais personne ne vous écoute, personne ne vous entend. Le gouvernement ne vous voit pas, ne vous considère toujours pas. Vous n’avez pas d’autres choix que d’employer la manière forte : les fusils, les lance pierres, le combat au corps à corps, tout est permis. Vous êtes près à mettre à sang et à feu votre ville, si c’est le seul moyen de vous faire reconnaître, de prendre le pouvoir. Un seul but, faire tomber la monarchie. Le roi a tout, vous n’avez rien. L’heure de la justice a sonné. <br>
+                Mais personne ne vous écoute, personne ne vous entend. Le gouvernement ne vous voit pas, ne vous considère toujours pas. Vous n’avez pas d’autres choix que d’employer la manière forte : les fusils, les lance pierres, le combat au corps à corps, tout est permis. Vous êtes prêts à mettre à sang et à feu votre ville, si c’est le seul moyen de vous faire reconnaître, de prendre le pouvoir. Un seul but, faire tomber la monarchie. Le roi a tout, vous n’avez rien. L’heure de la justice a sonné. <br>
                 Tout est permis mais seulement de votre point de vue puisque très vite, vous êtes arrêté et mis en prison. Pas n’importe quelle prison : la Bastille de Grenoble. Grande, sombre, dans les montagnes, avec les meilleurs gardes de la région et dont personne ne s’est encore évadé. En effet, ces soldats ne vous quitterons pas des yeux et fixerons vos moindres mouvements.
             </p>
             <p>
                 Mais votre chance arrive : débordés, les gardes s’absentent. C’est le moment de sortir, mais comment, par où, et avec quoi ? C’est à vous de trouver par des énigmes, des recherches et de la réflexion, en équipe.
             </p>
             <p id="gras">
-                Mais dépêchez-vous car dans soixante minutes les gardes reviennent, et s’ils vous attrapent, c’est la guillotine assurée ! <br> <br>
+                Alors dépêchez-vous car dans soixante minutes les gardes reviennent, et s’ils vous attrapent, c’est la guillotine assurée ! <br> <br>
             </p>
             <p id="avertissement">
                 <i>Ne convient pas aux enfants de moins de 14 ans</i>
